# i-own-hype

./: .gitignore  README.md  i-own-hype-review.md
data/: balances.json
helpers/: build_merkle.js  get_hype_balances.py  package.json  requirements.txt
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
