[package]
name = "token-ownership-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "4.0.0" }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
hex = "0.4.3"
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-4.1.0" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-0.16.9-sp1-4.0.0" }
alloy-primitives = "0.6"

[patch.crates-io]
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-4.1.0" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-0.16.9-sp1-4.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" } 